observability/loki/ingress-gateway-write.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: loki-gateway
  namespace: loki-stack
  annotations:
#     nginx.ingress.kubernetes.io/backend-protocol: HTTP
#     nginx.ingress.kubernetes.io/use-regex: "true"
#     nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: loki-gateway.home.loc
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: loki-gateway
            port:
              number: 80
